# eco_dashboard

./: .coverage  .gitignore  Nouveau Document texte.txt  README.md  action.txt  coverage_report.txt  docker-compose.yml  generate_front.sh  makefile  othertest.sh  package-lock.json  pyproject.toml
agentic_frontend/: package-lock.json  package.json
agents/: agile_agent.py  frontend_agent.py  main.py
backend/: Dockerfile  README.md  dependencies.py  diffs.txt  main.py  pyproject.toml  requirements.txt  tesafter.py  variables.py
backend/actions_templates/: actions.py  bicycle.json  plant_based_diet.json  public_transport.json  renewable_energy.json  tree_planting.json  waste_reduction.json
backend/compute_tools/: action_checkers.py  compute_bicycle.py  full_datas_aggregation.py  quartier_cordonnes.py
backend/compute_tools/compute_actions/: car_transport.py  compute_bicycle.py  compute_plant_based_diet.py  compute_renewable_energy.py  compute_tree_planting.py  compute_waste_reduction.py  public_transport.py
backend/configs/: .env  config.py
backend/database/: collections_handeler.py  database.py  database_configs.py  database_crud.py  database_handeler.py  handle_multiple_collections.py
backend/docs/: acts.txt  authentification_schema.txt  badges.txt
backend/models/: actions_models.py  users_models.py
backend/old_codes/: connexion_router_old.py  database_handeler.py
backend/routes/: actions_router.py  admins_routes.py  cached_routes.py  connexion_router.py  full_data_router.py  users_dashboard_router.py  users_profiles_routes.py
backend/scripts/: dependencies.py  emissions_factors.py  variables.py
backend/services/: cache_service.py
backend/tests/: conftest.py  explication.txt
backend/tests/unit/: test_collections.py  test_connexion_routes.py  test_crud.py  test_delete_route.py  test_multiple_collections.py  test_routes.py  test_variables.py
backend/users_handler/: handle_users.py
data/: full_actions.json  mock_actions.json
frontend/: Dockerfile  index_old.html  (+1 more)
(+48 files in other folders)
