[tool.poetry]
name = "eco-dashboard"
version = "0.1.0"
description = ""
authors = ["ABOUABDALLAH Mohamed-Anwar <mohamed-anwar.abouabdallah@inria.fr>"]
readme = "README.md"
packages = [{include = "eco_dashboard"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.121.1"
geopy = "^2.4.1"
python-dotenv = "^1.2.1"
pymongo = "^4.15.4"
passlib = "^1.7.4"
requests = "^2.32.5"
python-multipart = "^0.0.20"
openai = "^2.13.0"
autopep8 = "^2.3.2"
pyjwt = ">=2.7,<3.0"
isort = "^7.0.0"
black = "^25.12.0"
uvicorn = {extras = ["standard"], version = "^0.38.0"}


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
httpx = "^0.28.1"
mongomock = "^4.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
